docs/styles/style.css
/* ... */
@media only screen and (max-width: 30rem) {
  .icon {
    margin: 0;
  }
}

.here,
.not-here,
.date {
  font-weight: 600;
  font-size: 0.875rem;
}

.here {
  color: var(--color-primary);
}

.not-active .not-here {
  opacity: 0;
}

.date {
  color: var(--color-foreground);
}

@media only screen and (max-width: 30rem) {
  .date {
    margin-top: -1.4rem;
  }
}

/* FOOTER */

footer {
  position: relative;
  margin: 16rem 0;
  text-align: left;
  background: var(--color-foreground-level-1);
}

footer .footer-gif {
  position: absolute;
  width: 40rem;
  left: 20vw;
}

footer .text {
  max-width: 27.5rem;
  position: relative;
  left: 50%;
  top: 6rem;
}

footer h1 {
  font-size: 17.5rem;
  color: #cc0000;
  line-height: 0.765;
  mix-blend-mode: difference;
}

@media only screen and (max-width: 48rem) {
  footer h1 {
    font-size: 33vw;
  }

  footer .footer-gif {
    width: 60vw;
    top: -18vw;
  }

  footer .text {
    left: inherit;
    top: 3rem;
  }
}

footer h1 span {
  position: relative;
  left: 12vw;
  display: block;
}

footer p {
  color: var(--color-foreground);
}

footer p.small {
  margin-top: 1rem;
  color: var(--color-foreground-level-5);
}

footer form {
  margin: 2rem 0;
}

footer form input[type="email"] {
  border: 0.0625rem solid var(--color-foreground);
  color: var(--color-foreground);
  width: 20rem;
  margin-left: 0;
}

@media only screen and (max-width: 30rem) {
  footer form input[type="email"] {
    width: 12rem;
  }
}

footer form button {
  color: var(--color-foreground);
  border-color: var(--color-foreground);
}

footer form button:hover {
  color: var(--color-background);
  background: var(--color-secondary);
  border-color: var(--color-secondary);
}

/* subscribe page */

.subscribe-button {
  margin-top: 2rem;
  z-index: 2;
  mix-blend-mode: exclusion;
}

